<resources>

    <string name="app_name">emsys</string>

    <!-- Main Activity -->
    <string name="button_consume_ws">Consumir WS GET</string>
    <string name="button_goto_app">Ir a la APP</string>
    <string name="button_log_notifications_token">Imprimir token de Notificaciones</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="button_test_database" translatable="false">Test Database</string>
    <string name="button_test_ssl" translatable="false">Test SSL</string>

    <!-- Consume WS Activity-->
    <string name="action_send">Enviar</string>
    <string name="title_input_url">Ingrese URL</string>
    <string name="example_url">http://pis-prototipo1-api.azurewebsites.net/api/usuario</string>

    <!-- Login Activity -->
    <string name="action_login">Iniciar sesión</string>
    <string name="hint_username">Nombre de usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="error_required_username">Por favor, ingresa el nombre de usuario para iniciar sesión</string>
    <string name="error_required_password">Por favor, ingresa la contraseña para iniciar sesión</string>

    <!--Role Chooser Activity-->
    <string name="button_despachador">Despachador de zona</string>
    <string name="button_recurso">Recurso</string>
    <string name="button_sin_seleccion">Ingresar sin selección</string>
    <string name="textview_role_chooser">Seleccione qué zonas o recurso desea elegir</string>

    <!--Zona recursos chooser-->
    <string name="button_continuar">Continuar</string>

    <!--Menu superior-->
    <string name="menu_create_event_string">Crear Evento</string>
    <string name="menu_list_events_string">Lista de eventos</string>
    <string name="menu_view_map_string">Ver mapa</string>
    <string name="menu_external_service_string">Servicio externo</string>
    <string name="menu_logout_string">Cerrar sesión</string>
    <string name="menu_filter_string">Ordenar eventos</string>

    <!--Test fragment-->
    <string name="test_content_description">Test content description</string>

    <!--Error messages-->
    <string name="error_generic">Ha ocurrido un error inesperado. Por favor intente nuevamente.</string>
    <string name="error_no_auth">Usuario no autenticado.</string>
    <string name="error_http">La respuesta del servidor incluye un código de error HTTP.</string>
    <string name="error_connection_cancel">Cancelar</string>
    <string name="error_connection_retry">Reintentar</string>
    <string name="error_server_communication_message">Error en la comunicación con el servidor.</string>
    <string name="error_http_unauthorized">Pedido no autorizado</string>
    <string name="error_internal">Ocurrió un error interno en la aplicación.</string>
    <string name="error_no_available_multimedia">No hay contenido multimedia disponible para la opción seleccionada</string>
    <string name="error_access_camera_message">Ocurrió un error al intentar acceder a la camara</string>
    <string name="error_invalid_credentials">Las credenciales son inválidas</string>
    <string name="error_already_reported_hour">El recurso ya posee una hora de arribo previa en la extensión seleccionada.</string>
    <string name="success_msg">Éxito</string>
    <string name="error_resource_unavailable">El recurso seleccionado no se encuentra disponible.</string>
    <string name="error_no_permission">El usuario no está autorizado a acceder al contenido solicitado</string>
    <string name="error_unkown">Error desconocido</string>

    <!--Preferences-->
    <string name="preferences_routes_summary">Configuración de rutas de servicios.</string>
    <string name="preferences_routes_title">Rutas</string>

    <!--Events Map-->
    <string name="map_event_view_detail">Ver detalle</string>
    <string name="error_event_details_from_map">Hubo un error al obtener el detalle del evento seleccionado.</string>

    <!--Events details-->
    <string name="event_details_missing_value">No tiene</string>

    <!--Events details - Extension Menu-->
    <string name="attach_geolocation_option_title">Adjuntar geoubicación</string>
    <string name="attach_image_option_title">Adjuntar imagen</string>
    <string name="attach_audio_option_title">Adjuntar audio</string>
    <string name="attach_video_option_title">Adjuntar video</string>
    <string name="attach_image_menu_title">Seleccione una opción</string>

    <string name="event_details_status">Estado</string>
    <string name="event_details_status_without_dispatcher">Sin despachar</string>

    <string name="event_details_dispatcher_description">Descripción del despachador</string>
    <string name="event_details_resource_description">Descripción de los recursos</string>
    <string name="event_details_dispatcher">Despachador</string>
    <string name="event_details_resources_description">Recursos asignados</string>

    <!-- External Service Related -->
    <string name="dummy_first_field_external_service_row">Dummy First text!</string>
    <string name="dummy_second_field_external_service_row">Dummy Second text!</string>
    <string name="dummy_third_field_external_service_row">Dummy Third text!</string>
    <string name="dummy_fourth_field_external_service_row">Dummy Fourth text!</string>
    <string name="dummy_fifth_field_external_service_row">Dummy Fifth text!</string>
    <string name="dummy_sixth_field_external_service_row">Dummy Sixth text!</string>
    <string name="dummy_seventh_field_external_service_row">Dummy Seventh text!</string>
    <string name="dummy_eighth_field_external_service_row">Dummy Eighth text!</string>
    <string name="dummy_ninth_field_external_service_row">Dummy Ninth text!</string>
    <string name="dummy_tenth_field_external_service_row">Dummy Tenth text!</string>
    <string name="first_param">Primer parámetro:</string>
    <string name="third_param">Tercer parámetro:</string>
    <string name="second_param">Segundo parámetro:</string>
    <string name="fourth_param">Cuarto parámetro:</string>
    <string name="fifth_param">Quinto parámetro:</string>
    <string name="sixth_param">Sexto parámetro:</string>
    <string name="seventh_param">Séptimo parámetro:</string>
    <string name="eighth_param">Octavo parámetro:</string>
    <string name="ninth_param">Noveno parámetro:</string>
    <string name="tenth_param">Décimo parámetro:</string>
    <string name="query">Consultar</string>
    <string name="error_ws_unavailable">El Servicio externo no está disponible</string>
    <string name="error_title">Error</string>
    <string name="ok_button">OK</string>

    <!--Reportar hora-->
    <string name="report_time_success">Se adjunto hora de arribo</string>
    <string name="time_already_reported">La hora de arribo ya fue reportada anteriormente</string>
    <string name="action_report_time">Reportar hora</string>

    <!--Actualizar descripcion-->
    <string name="action_update_desc">Actualizar descripción</string>
    <string name="update_desc_success_string">La descripción fue actualizada</string>
    <string name="error_network_update_desc">"Ocurrió un problema en la comunicación. La descripción será enviada cuando sea posible."</string>

    <string name="input_title_update_description">Ingrese la nueva descripción</string>
    <string name="button_cancel">Cancelar</string>
    <string name="button_update">Actualizar</string>

    <!--Adjuntar geoubicacion-->
    <string name="action_attach_geolocation">Adjuntar geoubicación</string>
    <string name="attach_geolocation_confirmation_button_text">Enviar ubicación seleccionada</string>
    <string name="attach_geolocation_message">Seleccione la nueva ubicación geográfica</string>
    <string name="attach_geolocation_null_selection_string">Debe seleccionar una ubicación primero.</string>
    <string name="attach_geolocation_success_message">La geoubicación fue registrada.</string>

    <!--Adjuntar imágenes-->
    <string name="message_image_attached">Se adjuntó la imagen al evento.</string>
    <string name="error_message_image_not_attached">Ocurrió un error al subir la imagen</string>

    <string name="dummy_description">Description</string>
    <string name="dummy_text">Dummy text</string>

    <!--Ver imagenes en Ver info de evento-->
    <string name="image_file_path">emsysMobile</string>
    <string name="path_separator">/</string>

    <!--Filtrar eventos-->
    <string name="filter_values">Ordenar por:</string>
    <string name="button_filter">Aplicar</string>

    <!-- Notificaciones -->
    <string name="message_no_notifications">Aún no tienes notificaciones</string>
    <string name="date_text_just_now">hace unos segundos</string>
    <string name="date_text_a_minute_ago">hace un minuto</string>
    <string name="date_text_minutes_ago">"hace %1$d minutos"</string>
    <string name="date_text_an_hour_ago">hace una hora</string>
    <string name="date_text_hours_ago">"hace %1$d horas"</string>
    <string name="date_text_yesterday">ayer</string>
    <string name="date_text_days_ago">" días atras"</string>
    <string name="notifications_title">Notificaciones</string>

</resources>
