<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@id/menu_create_event_button"
        android:title="@string/menu_create_event_string"
        android:icon="@drawable/ic_add_white_24dp"
        android:orderInCategory="0"
        app:showAsAction="ifRoom|withText"/>
    <item
        android:id="@id/menu_list_events_button"
        android:title="@string/menu_list_events_string"
        android:icon="@drawable/ic_list_white_24dp"
        android:orderInCategory="100"
        app:showAsAction="ifRoom|withText"/>
    <item
        android:id="@id/menu_view_map_button"
        android:title="@string/menu_view_map_string"
        android:icon="@drawable/ic_map_white_24dp"
        android:orderInCategory="100"
        app:showAsAction="ifRoom|withText"/>
    <item
        android:id="@id/menu_external_service_button"
        android:title="@string/menu_external_service_string"
        android:icon="@drawable/ic_cloud_download_white_24dp"
        android:orderInCategory="100"
        app:showAsAction="ifRoom|withText"/>
    <item
        android:id="@id/menu_logout_button"
        android:title="@string/menu_logout_string"
        android:icon="@drawable/ic_power_settings_new_white_24dp"
        android:orderInCategory="100"
        app:showAsAction="ifRoom|withText" />
</menu>