<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/spacing_normal"
    tools:context=".activities.MainActivity"
    android:orientation="vertical">

    <Button
        android:id="@+id/button_goto_app"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height_normal"
        android:text="@string/button_goto_app"
        style="@style/AppButton"/>

    <Button
        android:id="@+id/button_consume_ws"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height_normal"
        android:layout_marginTop="@dimen/spacing_normal"
        android:text="@string/button_consume_ws"
        style="@style/AppButton"/>

    <Button
        android:id="@+id/button_log_notifications_token"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height_normal"
        android:layout_marginTop="@dimen/spacing_normal"
        android:text="@string/button_log_notifications_token"
        style="@style/AppButton"/>

    <Button
        style="@style/AppButton"
        android:id="@+id/button_test_database"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_normal"
        android:text="@string/button_test_database" />

</LinearLayout>