<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/spacing_normal"
    android:background="@color/gray_xxlight"
    tools:context=".ui.activities.login.RoleChooserActivity">

    <LinearLayout
        android:id="@+id/buttons_container"
        android:layout_width="@dimen/field_width_normal"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_despachador"
            android:layout_width="@dimen/button_width_large2"
            android:layout_height="@dimen/button_height_normal"
            android:layout_marginTop="@dimen/spacing_normal"
            android:text="@string/button_despachador"
            style="@style/AppButtonDark"
            android:textAllCaps="false"
            android:background="@drawable/custom_button"/>

        <Button
            android:id="@+id/button_recurso"
            android:layout_width="@dimen/button_width_large2"
            android:layout_height="@dimen/button_height_normal"
            android:layout_marginTop="@dimen/spacing_normal"
            android:text="@string/button_recurso"
            style="@style/AppButtonDark"
            android:textAllCaps="false"
            android:background="@drawable/custom_button" />

        <Button
            android:id="@+id/button_sin_seleccion"
            android:layout_width="@dimen/button_width_large2"
            android:layout_height="@dimen/button_height_normal"
            android:layout_marginTop="@dimen/spacing_normal"
            android:text="@string/button_sin_seleccion"
            style="@style/AppButtonDark"
            android:textAllCaps="false"
            android:background="@drawable/custom_button" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttons_container"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/spacing_large"
        android:indeterminate="true"
        android:visibility="gone"
        style="?android:attr/progressBarStyle" />

    <TextView
        android:text="@string/textview_role_chooser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttons_container"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="18dp"
        android:textColor="@color/colorAccent"
        android:textAllCaps="false"
        android:textSize="@dimen/font_larger"
        android:gravity="center_horizontal"/>

</RelativeLayout>
