<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/first_field_tv"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textAppearance="@style/BigBlueText"
        android:layout_centerVertical="true"
        android:layout_margin="10dp"
        android:text="@string/dummy_first_field_external_service_row"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/first_field_tv"
        android:layout_toEndOf="@id/first_field_tv"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/second_field_tv"
            android:textAppearance="@style/MediumBlackText"
            android:text="@string/dummy_second_field_external_service_row"/>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@color/colorPrimary_600"
            android:layout_below="@id/second_field_tv"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/third_field_tv"
            android:textAppearance="@style/SmallGrayText"
            android:layout_below="@id/second_field_tv"
            android:text="@string/dummy_third_field_external_service_row"/>

    </RelativeLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@color/colorPrimary_900"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

</RelativeLayout>
