<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/spacing_normal"
    android:orientation="vertical"
    tools:context="com.sonda.emsysmobile.activities.ConsumeWSActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_input_url"
        android:textSize="@dimen/font_large"
        android:textColor="@color/gray_dark"/>

    <EditText
        android:id="@+id/input_url"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height_normal"
        android:textColor="@color/colorPrimary_800"
        android:textSize="@dimen/font_large"
        android:inputType="textUri"
        android:text="@string/example_url"/>

    <Button
        android:id="@+id/button_send_request"
        android:layout_width="@dimen/button_width_short"
        android:layout_height="@dimen/button_height_normal"
        android:layout_marginTop="@dimen/spacing_normal"
        android:layout_marginBottom="@dimen/spacing_normal"
        android:layout_gravity="end"
        style="@style/AppButton"
        android:text="@string/action_send"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/spacing_normal">

        <TextView
            android:id="@+id/text_response"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/spacing_normal"
            android:background="@color/colorPrimary_50"
            android:textColor="@color/colorPrimary_900"
            android:textSize="@dimen/font_large"/>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminate="true"
            android:indeterminateDrawable="@drawable/blue_progress_bar"
            android:visibility="gone"
            style="?android:attr/progressBarStyle" />

    </RelativeLayout>

</LinearLayout>
